syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Cogito.Kademlia.Protobuf";

message Packet {
    uint64 network = 1;
    repeated Message messages = 2;
}

message Message {
    Header header = 1;
    oneof body {
        PingRequest ping_request = 3;
        PingResponse ping_response = 4;
        StoreRequest store_request = 5;
        StoreResponse store_response = 6;
        FindNodeRequest find_node_request = 7;
        FindNodeResponse find_node_response = 8;
        FindValueRequest find_value_request = 9;
        FindValueResponse find_value_response = 10;
    }
}

message Header {
    bytes sender = 2;
    uint64 magic = 3;
}

message IpAddress {
    oneof ip_address {
        fixed32 v4 = 1;
        bytes v6 = 2;
    }
}

message IpEndpoint {
    string uri = 1;
}

message Peer {
    bytes id = 1;
    repeated IpEndpoint endpoints = 2;
}

message PingRequest {
    repeated IpEndpoint endpoints = 1;
}

message PingResponse {
    repeated IpEndpoint endpoints = 1;
}

message StoreRequest {
    enum StoreRequestMode {
        Primary = 0;
        Replica = 1;
    }

    bytes key = 1;
    StoreRequestMode mode = 2;
    bool has_value = 3;
    ValueInfo value = 4;
}

message StoreResponse {
    enum StoreResponseStatus {
        Invalid = 0;
        Success = 1;
    }

    StoreResponseStatus status = 1;
}

message FindNodeRequest {
    bytes key = 1;
}

message FindNodeResponse {
    repeated Peer peers = 1;
}

message FindValueRequest {
    bytes key = 1;
}

message FindValueResponse {
    repeated Peer peers = 1;
    bool has_value = 2;
    ValueInfo value = 3;
}

message ValueInfo {
    bytes data = 1;
    uint64 version = 2;
    google.protobuf.Duration ttl = 3;
}
